[project]
name = "waspnest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "instructor>=1.6.3",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.2",
]
